canary-deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx
        subset: v1
      weight: 10
    - destination:
        host: nginx
        subset: v2
      weight: 90

~
